// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField.js should calculate element height when using auto-grow prop 1`] = `

<div class="input-group input-group--focused input-group--dirty input-group--text-field input-group--multi-line input-group--no-resize primary--text">
  <div class="input-group__input">
    <textarea tabindex="0"
              rows="5"
              style="height: 120px;"
    >
    </textarea>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VTextField.js should have prefix and suffix 1`] = `

<div class="v-input v-input--text v-input--text--prefix theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 12px; position: absolute;"
      >
      </label>
      <div class="v-input--text__prefix">
        $
      </div>
      <input tabindex="0"
             type="text"
      >
      <div class="v-input--text__suffix">
        .com
      </div>
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should match auto-grow snapshot 1`] = `

<div class="input-group input-group--text-field input-group--no-resize input-group--textarea primary--text">
  <div class="input-group__input">
    <textarea tabindex="0"
              rows="5"
              style="height: 120px;"
    >
    </textarea>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VTextField.js should match multi-line snapshot 1`] = `

<div class="input-group input-group--text-field input-group--multi-line primary--text">
  <div class="input-group__input">
    <textarea tabindex="0"
              rows="5"
    >
    </textarea>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VTextField.js should match textarea snapshot 1`] = `

<div class="input-group input-group--text-field input-group--textarea primary--text">
  <div class="input-group__input">
    <textarea tabindex="0"
              rows="5"
    >
    </textarea>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false 1`] = `

<div class="v-input v-input--text theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: absolute;"
      >
      </label>
      <input maxlength="50"
             tabindex="0"
             type="text"
      >
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
      <div class="v-counter">
        0 / 50
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false 2`] = `

<div class="v-input v-input--text theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: absolute;"
      >
      </label>
      <input maxlength="50"
             tabindex="0"
             type="text"
      >
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component and match snapshot 1`] = `

<div class="v-input v-input--text theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: absolute;"
      >
      </label>
      <input tabindex="0"
             type="text"
      >
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component with async loading and custom progress and match snapshot 1`] = `

<div class="v-input v-input--text v-input--is-loading theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: absolute;"
      >
      </label>
      <input tabindex="0"
             type="text"
      >
      <div class="progress-linear"
           style="height: 7px;"
      >
        <div class="progress-linear__background orange"
             style="height: 7px; opacity: 0.3; width: 100%;"
        >
        </div>
        <div class="progress-linear__bar">
          <div class="progress-linear__bar__indeterminate progress-linear__bar__indeterminate--active">
            <div class="progress-linear__bar__indeterminate long orange">
            </div>
            <div class="progress-linear__bar__indeterminate short orange">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component with async loading and match snapshot 1`] = `

<div class="v-input v-input--text v-input--is-loading theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: absolute;"
      >
      </label>
      <input tabindex="0"
             type="text"
      >
      <div class="progress-linear"
           style="height: 2px;"
      >
        <div class="progress-linear__background primary"
             style="height: 2px; opacity: 0.3; width: 100%;"
        >
        </div>
        <div class="progress-linear__bar">
          <div class="progress-linear__bar__indeterminate progress-linear__bar__indeterminate--active">
            <div class="progress-linear__bar__indeterminate long primary">
            </div>
            <div class="progress-linear__bar__indeterminate short primary">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-input--text__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;
